# helix

./: .gitignore  LICENSE  README.html  README.md  README_BAK.md  helix.code-workspace  helix.sln
archive/: LICENSE
archive/helix-runtime/: pyproject.toml
archive/helix-runtime/src/helix_runtime/: cli.py
archive/helix-runtime/src/helix_runtime/application/: __init__.py  models.py
archive/helix-runtime/src/helix_runtime/brokers/: payloads.py  topology.py
archive/helix-runtime/tests/: test_trade_lifecycle.py
archive/helix-store/: market_data_seed.json
archive/helix-web/: package-lock.json
docs/: architecture.mmd
helix-core/: README.md  pyproject.toml
helix-core/notebooks/: helix_core_demo.ipynb
helix-rest/: helix.sln
helix-runtime/: README.md  pyproject.toml
helix-runtime/src/helix_runtime/: __init__.py  broker_names.py  brokers.py  cli.py  client.py  config.py  consumers.py  events.py  models.py  ports.py  processor.py  service.py  sqlite_store.py
helix-runtime/src/helix_runtime/application/: models.py  ports.py  processors.py  service.py
helix-runtime/src/helix_runtime/brokers/: __init__.py  adapters.py  config.py  payloads.py  topology.py  workers.py
helix-runtime/src/helix_runtime/infrastructure/: __init__.py  publishers.py  sqlite_store.py
helix-store/: helix.db  init_clean_state.py  market_data_seed.json  market_data_snapshot_seed.json  schema.sql  seed_from_helix_web_mock.py  seed_market_data_snapshot.py  seed_reference_data.py  seed_trades.py
notebooks/: direct_trade_booking_via_rabbitmq.ipynb
web/: package-lock.json  package.json
(+233 files in other folders)
